--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: small-rose/just-the-docs
+remote_theme: zhuchunming/just-the-docs
 
 title: Zz笔记
 
@@ -10,7 +10,7 @@ footer_content: "Copyright &copy; 2022 Small-Rose. <a href=\"https://www.netlify
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/small-rose/NoteBook" # the github URL for your repo
+gh_edit_repository: "https://github.com/zhuchunming/zhuchunming.github.io" # the github URL for your repo
 gh_edit_branch: "gh-pages" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
@@ -19,7 +19,7 @@ gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into t
 # Aux links for the upper right navigation
 aux_links:
   "NoteBook on GitHub":
-    - "//github.com/small-rose/NoteBook"
+    - "https://github.com/zhuchunming/zhuchunming.github.io"
     -
 
 plugins:
